tests/semantic/invalid/variable_already_defined.c
/*
 * Multi-line comment.
 */

int32_t a = 0;
int64_t a;
